force-app/main/default/objects/Volume_Discount_Tier__c/Volume_Discount_Tier__c.object-meta.xml
<CustomObject>
    <description>Quantity break and discount percent on a Contract.</description>
    <label>Volume Discount Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volume Discount Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>