force-app/main/default/objects/Volume_Discount_Tier__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Percent</type>
</CustomField>