force-app/main/default/objects/Volume_Discount_Tier__c/fields/Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Quantity__c</fullName>
    <label>Min Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>