force-app/main/default/objects/Volume_Discount_Tier__c/validationRules/Discount_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Range</fullName>
    <active>true</active>
    <errorConditionFormula>Discount_Percent__c &lt; 0 || Discount_Percent__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>Discount Percent must be between 0 and 100.</errorMessage>
</ValidationRule>