force-app/main/default/objects/Volume_Discount_Tier__c/validationRules/Max_Gte_Min.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Gte_Min</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Max_Quantity__c)) &amp;&amp; Max_Quantity__c &lt; Min_Quantity__c</errorConditionFormula>
    <errorDisplayField>Max_Quantity__c</errorDisplayField>
    <errorMessage>Max Quantity must be greater than or equal to Min Quantity.</errorMessage>
</ValidationRule>