force-app/main/default/objects/Volume_Discount_Tier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Min_Quantity__c</columns>
    <columns>Max_Quantity__c</columns>
    <columns>Discount_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>